# ozcnr-briefcase

./: .gitignore  CMakeLists.txt  README.md
EvrakCantam/: CMakeLists.txt  EvrakCantam.cpp  EvrakCantam.h
